--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,7 +4,7 @@
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  padding: 2rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -51,7 +51,7 @@
 }
 
 .description {
-  margin: 4rem 0;
+  margin: 2rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
 }
@@ -71,6 +71,8 @@
   justify-content: center;
   flex-wrap: wrap;
   max-width: 800px;
+  cursor: pointer;
+
 }
 
 .card {
@@ -106,6 +108,13 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
+}
+
+.outerDiv{
+    margin: 10px !important;
+    border: 1px solid white;
+    padding: 17px;
+    border-radius: 10px;
 }
 
 @media (max-width: 600px) {
